# lakhua

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml  npm-publish.yml  pypi-publish.yml
.husky/: pre-commit
docs/: architecture.md  contributing.md  faq.md  getting-started.md
libs/go/: README.md  go.mod  lakhua.go  lakhua_test.go
libs/go/examples/basic/: main.go
libs/go/internal/config/: constants.go  store.go
libs/go/internal/loader/: loader.go
libs/javascript/: README.md  biome.json  bun.lockb  package.json  tsconfig.json
libs/javascript/data/: reverse_geo_4.json  reverse_geo_5.json
libs/javascript/examples/: basic.ts  batch.ts
libs/javascript/src/: contant.ts  dataLoader.ts  geocoder.ts  index.ts  node-shims.d.ts  types.ts
libs/javascript/src/config/: constants.ts
libs/javascript/src/core/: data-loader.ts  geocoder.ts  index.ts
libs/javascript/src/types/: geocode.ts  index.ts
libs/javascript/test/: bun-test-shims.d.ts  geocoder.test.ts  performance.test.ts
libs/python/: .gitignore  .ruff.toml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
libs/python/lakhua/: __init__.py  types.py
libs/python/lakhua/core/: __init__.py  constants.py  data_loader.py  geocoder.py
libs/python/lakhua/data/: reverse_geo_4.json  reverse_geo_5.json
libs/python/tests/: test_geocoder.py  test_performance.py
